--- a/app/globals.css
+++ b/app/globals.css
@@ -112,7 +112,7 @@ img{
   max-height: 138px;
 }
 
-.move-button{
+.btn{
   padding: 1.25rem;
   border-radius: 0.25rem;
   background-color: #4a5568;
@@ -122,7 +122,7 @@ img{
   margin: 0.25rem;
 }
 
-.move-button:hover{
+.btn:hover{
   background-color: #2d3748;
   border: 1px solid #2d3748;
 }
